--- a/index.html
+++ b/index.html
@@ -1,21 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head><title>Login</title></head>
-<body>
-<h2>Login</h2>
-<input id="user" placeholder="Username">
-<input id="pass" placeholder="Password" type="password">
-<button onclick="login()">Login</button>
-<script>
-  function login() {
-    const u = document.getElementById('user').value;
-    const p = document.getElementById('pass').value;
-    if(u === 'admin' && p === 'password') {
-      window.location.href = 'downloads.html';
-    } else {
-      alert('Incorrect credentials');
-    }
-  }
-</script>
-</body>
+<body class="neterror" style="font-family: Roboto, sans-serif; font-size: 75%" jstcache="0">
+  <div id="main-frame-error" class="interstitial-wrapper" jstcache="0">
+    <div id="main-content" jstcache="0">
+      <div class="icon icon-generic" jstcache="0"></div>
+      <div id="main-message" jstcache="0">
+        <h1 jstcache="0">
+          <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="9">This site can’t provide a secure connection</span>
+          <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
+        </h1>
+        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1"><strong jscontent="hostName" jstcache="22">shim.the-repo.org</strong> uses an unsupported protocol.</p>
+        <!--The suggestion list and error code are normally presented inline,
+          in which case error-information-popup-* divs have no effect. When
+          error-information-popup-container has the use-popup-container class, this
+          information is provided in a popup instead.-->
+        <div id="error-information-popup-container" jstcache="0">
+          <div id="error-information-popup" jstcache="0">
+            <div id="error-information-popup-box" jstcache="0">
+              <div id="error-information-popup-content" jstcache="0">
+                <div id="suggestions-list" style="display:none" jsdisplay="(suggestionsSummaryList &amp;&amp; suggestionsSummaryList.length)" jstcache="16">
+                  <p jsvalues=".innerHTML:suggestionsSummaryListHeader" jstcache="18"></p>
+                  <ul jsvalues=".className:suggestionsSummaryList.length == 1 ? 'single-suggestion' : ''" jstcache="19">
+                    <li jsselect="suggestionsSummaryList" jsvalues=".innerHTML:summary" jstcache="21"></li>
+                  </ul>
+                </div>
+                <div class="error-code" jscontent="errorCode" jstcache="17">ERR_SSL_VERSION_OR_CIPHER_MISMATCH</div>
+                <p id="error-information-popup-close" jstcache="0">
+                  <a class="link-button" jscontent="closeDescriptionPopup" onclick="toggleErrorInformationPopup();" jstcache="20">null</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="download-links-wrapper" class="hidden" jstcache="0">
+          <div id="download-link-wrapper" jstcache="0">
+            <a id="download-link" class="link-button" onclick="downloadButtonClick()" jsselect="downloadButton" jscontent="msg" jsvalues=".disabledText:disabledMsg" jstcache="6" style="display: none;">
+            </a>
+          </div>
+          <div id="download-link-clicked-wrapper" class="hidden" jstcache="0">
+            <div id="download-link-clicked" class="link-button" jsselect="downloadButton" jscontent="disabledMsg" jstcache="11" style="display: none;">
+            </div>
+          </div>
+        </div>
+        <div id="save-page-for-later-button" class="hidden" jstcache="0">
+          <a class="link-button" onclick="savePageLaterClick()" jsselect="savePageLater" jscontent="savePageMsg" jstcache="10" style="display: none;">
+          </a>
+        </div>
+        <div id="cancel-save-page-button" class="hidden" onclick="cancelSavePageClick()" jsselect="savePageLater" jsvalues=".innerHTML:cancelMsg" jstcache="4" style="display: none;">
+        </div>
+        <div id="offline-content-list" class="list-hidden" hidden="" jstcache="0">
+          <div id="offline-content-list-visibility-card" onclick="toggleOfflineContentListVisibility(true)" jstcache="0">
+            <div id="offline-content-list-title" jsselect="offlineContentList" jscontent="title" jstcache="12" style="display: none;">
+            </div>
+            <div jstcache="0">
+              <div id="offline-content-list-show-text" jsselect="offlineContentList" jscontent="showText" jstcache="14" style="display: none;">
+              </div>
+              <div id="offline-content-list-hide-text" jsselect="offlineContentList" jscontent="hideText" jstcache="15" style="display: none;">
+              </div>
+            </div>
+          </div>
+          <div id="offline-content-suggestions" jstcache="0"></div>
+          <div id="offline-content-list-action" jstcache="0">
+            <a class="link-button" onclick="launchDownloadsPage()" jsselect="offlineContentList" jscontent="actionText" jstcache="13" style="display: none;">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="buttons" class="nav-wrapper suggested-right" jstcache="0">
+      <div id="control-buttons" hidden="" jstcache="0">
+        <button id="reload-button" class="blue-button text-button" onclick="reloadButtonClick(this.url);" jsselect="reloadButton" jsvalues=".url:reloadUrl" jscontent="msg" jstcache="5" style="display: none;"></button>
+        <button id="download-button" class="blue-button text-button" onclick="downloadButtonClick()" jsselect="downloadButton" jscontent="msg" jsvalues=".disabledText:disabledMsg" jstcache="6" style="display: none;">
+        </button>
+      </div>
+      <button id="details-button" class="secondary-button text-button small-link singular" onclick="detailsButtonClick(); toggleHelpBox()" jscontent="details" jsdisplay="(suggestionsDetails &amp;&amp; suggestionsDetails.length > 0) || diagnose" jsvalues=".detailsText:details; .hideDetailsText:hideDetails;" jstcache="2">Details</button>
+    </div>
+    <div id="details" class="hidden" jstcache="0">
+      <div class="suggestions" jsselect="suggestionsDetails" jstcache="3" jsinstance="*0">
+        <div class="suggestion-header" jsvalues=".innerHTML:header" jstcache="7">Unsupported protocol</div>
+        <div class="suggestion-body" jsvalues=".innerHTML:body" jstcache="8">The client and server don't support a common SSL protocol version or cipher suite.</div>
+      </div>
+    </div>
+  </div>
+  <div id="sub-frame-error" jstcache="0">
+    <!-- Show details when hovering over the icon, in case the details are
+         hidden because they're too large. -->
+    <div class="icon" jstcache="0"></div>
+    <div id="sub-frame-error-details" jsselect="summary" jsvalues=".innerHTML:msg" jstcache="1"><strong jscontent="hostName" jstcache="22">shim.the-repo.org</strong> uses an unsupported protocol.</div>
+  </div>
 </html>
