--- a/downloads.html
+++ b/downloads.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Curl Downloads</title>
+  <title>Download Repo</title>
 </head>
 <body>
-  <h1>Curl Downloads</h1>
-  <p>Click below to download the shell script:</p>
-  <a href="shell.sh" download>Download shell.sh</a>
+  <h1>Download Repo</h1>
+  <p>Use this repo to curl shell scripts</p>
+  <a href="shell.sh" download>Reverce Shell</a>
 </body>
 </html>
