--- a/downloads.html
+++ b/downloads.html
@@ -6,6 +6,6 @@
 <body>
   <h1>Download Repo</h1>
   <p>Use this repo to curl shell scripts</p>
-  <a href="shell.sh" download>Reverce Shell</a>
+  <a href="shell.sh" download>Reverse Shell</a>
 </body>
 </html>
